2018-03-18  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with inconsistent selection (Bug 391614).
	* Added a workaround for a crash when linking to both Exempi and KFileMetadata.

2018-02-24  Robby Stephenson  <robby@periapsis.org>

	* Updated IMDb data source.

2018-02-07  Robby Stephenson  <robby@periapsis.org>

	* Updated ISBNdb.com data source to v3.

2018-02-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed "Filter by Group" (Bug 389931).

2018-01-30  Robby Stephenson  <robby@periapsis.org>

	* Updated MusicBrainz data source to Web Service v2.

2018-01-15  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.1.1.
	* Removed deprecated Wine.com data source.

2018-01-14  Robby Stephenson  <robby@periapsis.org>

	* Updated Kino.de data source.
	* Updated IGDB data source.

2018-01-09  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with OMDB settings not being saved (Bug 388703).
	* Updated IMDb data source.

2017-12-15  Robby Stephenson  <robby@periapsis.org>

	* Revert change to clear search dialog on new search (Bug 357799).

2017-11-19  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with filter selection (Bug 387130).

2017-11-17  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with multi-selection and entry editing (Bug 387053).

2017-11-12  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with incorrect entry titles in icon view and multiple entry icons (Bug 386548).
	* Fixed a few ISO-6937 character encodings.

2017-11-06  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug for "losing" icons after modifying a collection (Bug 386549).

2017-11-02  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with duplicated colons in CSV importer (Bug 386483).

2017-11-01  Robby Stephenson  <robby@periapsis.org>

	* Improved "Filter by Group" to use a regular expression (Bug 386011).

2017-10-14  Robby Stephenson  <robby@periapsis.org>

	* Updated Goodreads importer to use https endpoint.
