@@ -31,6 +31,7 @@ class BibtexmlTest : public QObject {
 Q_OBJECT
 
 private Q_SLOTS:
+  void initTestCase();
   void testImport();
 };
 
